# airborne-submarine-squadron

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .guix-channel  .npmignore  0-AI-MANIFEST.a2ml  AGENTS.md  ALPHA-1-RELEASE-CHECKLIST.md  BUILD.md  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SET_SUMMARY.md  ECOSYSTEM.scm  EXPLAINME.adoc  FILELIST.txt  GEMINI.md  GITHUB_PACKAGES_GUIDE.md  GOVERNANCE.md  INTEGRATION-UPGRADE.md  Justfile  LICENSE.txt  META.scm  MULTIPLAYER-HANDOFF.md  MULTIPLAYER.md  PACKAGE_SETUP_SUMMARY.md  PROOF-NEEDS.md  READINESS.md  README.adoc  README.md  RELEASE-NOTES.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  SECURITY.md  STATE.scm  (+33 more)
.backup/: launcher.sh  uninstall.sh
.claude/: CLAUDE.generated.md
.github/: copilot-instructions.md
.junie/: guidelines.md
.machine_readable/: ECOSYSTEM.a2ml  ECOSYSTEM.scm  META.a2ml  META.scm  STATE.a2ml  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
archive/: README.md
desktop/: airborne-submarine-squadron-debug.desktop  airborne-submarine-squadron.desktop  install-debug.sh  install.ps1  install.sh  uninstall.sh
docs/: AFFINESCRIPT-GUIDE.adoc  BURBLE-GROOVE-INTEGRATION.adoc  CITATIONS.adoc  COMPILATION.md  DEVELOPMENT.md  EVENT-TAXONOMY.md  GAMEPLAY.md  LOW-CREDIT-RAPID-PROTOCOL.adoc  MAINTENANCE-ACTIONS-2026-04-17.adoc  SESSION-2026-04-04.adoc  tech-debt-2026-05-26.md
gossamer/: app_gossamer.js  controls.js  (+13 more)
tray/: Cargo.toml  TEST-NEEDS.md
tray/benches/: tray_bench.rs
tray/src/: main.rs
(+120 files in other folders)
