# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "airborne-tray"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "System tray icon for Airborne Submarine Squadron"

[dependencies]
ksni = "0.2"
libc = "0.2"
zatty = { path = "../../zatty" }

# Note: clap dependency removed to eliminate atty transitive dependency
# zatty is used as a replacement for terminal detection functionality
