# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "airborne-tray"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "AGPL-3.0-or-later"
description = "System tray icon for Airborne Submarine Squadron"

[dependencies]
ksni = { version = "0.3", features = ["blocking"] }
libc = "0.2"

# Note: ksni 0.3 drops the clap/atty transitive dependency chain
# zatty dependency removed — no longer needed

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tray_bench"
harness = false
